<resources>
  <string name="app_name">Net Flick Streamer</string>
  <string name="version">Version: %1$s</string>
  <!--Activities-->
  <string name="old_api">Old API (16 – 20)</string>
  <string name="from_file">From file</string>
  <string name="display">Screen</string>
  <string name="rotation_rtmp">Rotation\n(include filters)</string>
  <string name="tv_select">Select your streamer</string>
  <string name="hint_protocol">protocol://yourendpoint</string>
  <!--filters-->
  <string name="grey_scale">Grey scale</string>
  <string name="negative">Negative</string>
  <string name="noise">Noise</string>
  <string name="sepia">Sepia</string>
  <string name="no_filter">No filter</string>
  <string name="analog_tv">Analog TV</string>
  <string name="android_view">Android view</string>
  <string name="basic_deformation">Basic deformation</string>
  <string name="beauty">Beauty</string>
  <string name="black">Black</string>
  <string name="blur">Blur</string>
  <string name="brightness">Brightness</string>
  <string name="cartoon">Cartoon</string>
  <string name="chroma">Chroma</string>
  <string name="circle">Circle</string>
  <string name="color">Color</string>
  <string name="contrast">Contrast</string>
  <string name="crop">Crop</string>
  <string name="duotone">Duotone</string>
  <string name="earlybird">EarlyBird</string>
  <string name="edge_detection">Edge detection</string>
  <string name="exposure">Exposure</string>
  <string name="fire">Fire</string>
  <string name="gamma">Gamma</string>
  <string name="glitch">Glitch</string>
  <string name="gif">Gif</string>
  <string name="halftone_lines">Halftone lines</string>
  <string name="image">Image</string>
  <string name="image_70s">Image 70s</string>
  <string name="lamoish">Lamoish</string>
  <string name="money">Money</string>
  <string name="pixelated">Pixelated</string>
  <string name="polygonization">Polygonization</string>
  <string name="rgb_saturate">RGB saturate</string>
  <string name="ripple">Ripple</string>
  <string name="rotation">Rotation</string>
  <string name="saturation">Saturation</string>
  <string name="surface_filter">Surface filter</string>
  <string name="rainbow">Rainbow</string>
  <string name="sharpness">Sharpness</string>
  <string name="snow">Snow</string>
  <string name="swirl">Swirl</string>
  <string name="temperature">Temperature</string>
  <string name="text">Text</string>
  <string name="zebra">Zebra</string>
  <!--Menu-->
  <string name="filters">Filters</string>
  <string name="orientation">Orientation</string>
  <string name="horizontal">Horizontal</string>
  <string name="vertical">Vertical</string>
  <string name="audio_source">Audio source</string>
  <string name="microphone">Microphone</string>
  <string name="video_source">Video source</string>
  <string name="camera1">Camera1</string>
  <string name="camera2">Camera2</string>
  <string name="camerax">CameraX</string>
  <string name="bitmap">Bitmap</string>
  <string name="match_menu">Match Menu</string>
  <string name="dimonis_logo">Dimonis Logo</string>
  <string name="select_local_team">select local team</string>
  <string name="select_visitor_team">Select visitor team</string>
  <string name="nombre_del_equipo">Team name</string>
  <string name="select_logo">Select Logo</string>
  <string name="save_team">Save Team</string>
  <string name="start_emiting">Start Broadcast</string>
  <string name="equipos_guardados">Saved Teams</string>
  <string name="youtube_api_key">AIzaSyCdV30Pq1O282wYjzlAlCy5saZLOMO2LuE</string>
  <string name="tournament_name">CEBU-X 2ª</string>
  <string name="start_countdown">Start Countdown</string>
  <string name="start_male">Start Male</string>
  <string name="start_female">Start Female</string>
  <string name="pause">Pause</string>
  <string name="_45_00">45:00</string>
  <string name="plus">+</string>
  <string name="minus">-</string>
  <string name="local">local</string>
  <string name="visitor">visitor</string>
  <string name="_45_min">45</string>
  <string name="mixed_game">Mixed Game</string>
    <string name="live_chat_messages">Live Chat Messages</string>
    <string name="public_broadcast">Public</string>
  <string name="no_listed">No listed</string>
  <string name="no_broadcast">No streaming</string>
  <string name="stream_icon">Stream icon</string>
  <string name="switch_icon">Switch icon</string>
    <string name="delete_team">Delete</string>
  <string name="local_attack">Local attacking</string>
  <string name="visitor_attack">Visitor attacking</string>
    <string name="_25_min">25</string>
    <string name="left"><![CDATA[<--]]></string>
  <string name="right"><![CDATA[-->]]></string>
    <string name="half_objective_score">7</string>
  <string name="MatchTime">Duración</string>
  <string name="HalftimeTime">Duración hasta half</string>
  <string name="halftimeScore">Puntuación para el half</string>
  <string name="select_resolution">Resolución</string>
  <string name="tournament_name_label">Nombre torneo</string>
  <string name="matchTimeLabel">Duración del partido</string>
  <string name="halftimeLabel">Duración del half</string>
  <string name="half_objective_score_label">Puntuación del half</string>

</resources>
