<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
  <EditText
      android:id="@+id/editTeamName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:hint="@string/nombre_del_equipo" />

  <Button
      android:id="@+id/buttonSelectLogo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="1dp"
      android:text="@string/seleccionar_logo" />

  <Button
      android:id="@+id/buttonSaveTeam"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="1dp"
      android:text="@string/guardar_equipo" />

  <RadioGroup
      android:id="@+id/visibilityRadioGroupOptions"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="16dp">

    <RadioButton
        android:id="@+id/radioPublic"
        android:layout_width="0dp"
        android:checked="true"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/public_broadcast" />

    <RadioButton
        android:id="@+id/radioUnlisted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/no_listed" />

    <RadioButton
        android:id="@+id/radioNoBroadcast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/no_broadcast" />
  </RadioGroup>

  <CheckBox
      android:id="@+id/mixedCheckBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mixed_game" />

  <EditText
      android:id="@+id/editTrournamentName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/tournament_name"
      android:inputType="text" />

  <EditText
      android:id="@+id/editMatchTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/_45_00"
      android:inputType="numberDecimal"/>

  <Button
      android:id="@+id/buttonStartRotationActivity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="1dp"
      android:text="@string/start_emiting" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/equipos_guardados"
      android:textSize="18sp"
      android:textStyle="bold" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewTeams"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"/>
</LinearLayout>
