<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <SurfaceView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/surfaceView"
      />

  <!--<EditText
      android:hint="@string/hint_protocol"
      android:visibility="gone"
      android:text="rtmp://a.rtmp.youtube.com/live2/hdv8-77ta-vjvu-ey2r-40bx"
      android:textColor="@color/appColor"
      android:textColorHint="@color/appColor"
      android:inputType="textUri"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_margin="20dp"
      android:id="@+id/et_rtp_url"
      app:layout_constraintTop_toTopOf="parent"
      />-->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_height="match_parent"
      android:layout_width="match_parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="0dp">
    <!-- Añadir el texto y los botones en la parte superior derecha -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/top_right_controls_local"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <TextView
          android:id="@+id/text_local_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/local"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:layout_marginEnd="8dp"
          />

      <Button
          android:id="@+id/local_button_plus"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginEnd="1dp"
          android:text="@string/plus"
          />

      <Button
          android:id="@+id/local_button_minus"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginEnd="1dp"
          android:text="@string/minus"
          />

    </LinearLayout>

    <!-- Añadir el texto y los botones en la parte superior derecha debajo de los del local -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/top_right_controls_visitor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_right_controls_local">

      <TextView
          android:id="@+id/text_visitor_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/visitor"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:layout_marginEnd="8dp"
          />

      <Button
          android:id="@+id/visitor_button_plus"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginEnd="1dp"
          android:text="@string/plus"
          />

      <Button
          android:id="@+id/visitor_button_minus"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:layout_marginEnd="1dp"
          android:text="@string/minus"
          />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/top_right_controls_countdown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/top_right_controls_local">

      <Button
          android:id="@+id/countdown_button"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:layout_marginEnd="1dp"
          android:text="@string/start_countdown" />

      <Button
          android:id="@+id/male_button"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:layout_marginEnd="1dp"
          android:text="@string/start_male" />

      <Button
          android:id="@+id/female_button"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:text="@string/start_female" />

      <Button
          android:id="@+id/countdown_pause_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pause"
          android:visibility="gone"/>


      <TextView
          android:id="@+id/countdown_textview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_45_00"
          android:textSize="24sp"
          android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:maxHeight="200dp"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/live_chat_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_right_controls_visitor">


        <TextView
            android:id="@+id/liveChatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:maxLines="7"
            android:scrollbars="vertical"
            android:layout_margin="5dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textSize="16sp"
            android:background="#000000"
            android:text="@string/live_chat_messages"
            android:textColor="#FFFFFF" />


    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_margin="16dp"
      >
    <SeekBar
        android:id="@+id/zoomSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:thumb="@drawable/custom_thumb"
        android:progressDrawable="@drawable/custom_track"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:contentDescription="@string/stream_icon"
        android:src="@drawable/stream_icon"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:id="@+id/b_start_stop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@id/switch_camera"
        />

    <ImageView
        android:contentDescription="@string/switch_icon"
        android:src="@drawable/switch_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/switch_camera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>